[tool.poetry]
name = "matcha"
version = "0.1.0"
description = "Dating site"
authors = ["Maxim Steklyanov"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
